--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -142,13 +142,13 @@ input, select, textarea {
 		font-size: 1.5em;
 	}
 	h3.portf{
-		color: #4500c5; 
-		font-weight: 500; 
+		color: #69b3a2; 
+		font-weight: 600; 
 		line-height: normal;
 	}
 	h3.ports{
-		color: #4500c5; 
-		font-weight: 200; 
+		color: #69b3a2; 
+		font-weight: 300; 
 		line-height: normal;
 	}
 	header {
@@ -2063,7 +2063,7 @@ input, select, textarea {
 		justify-content: space-between;
 		background: #222629 url("images/overlay.png");
 		box-shadow: inset -0.25em 0 0.25em 0 rgba(0, 0, 0, 0.1);
-		color: #fff;
+		color: #888;
 		height: 100%;
 		left: 0;
 		overflow-y: auto;
@@ -2118,7 +2118,7 @@ input, select, textarea {
 
 		#logo h1 {
 			position: relative;
-			color: #fff;
+			color: #888;
 			font-weight: 600;
 			font-size: 1em;
 			line-height: 1em;
@@ -2180,11 +2180,11 @@ input, select, textarea {
 				#nav ul li a.active {
 					background: rgba(0, 0, 0, 0.15);
 					box-shadow: inset 0 0 0.25em 0 rgba(0, 0, 0, 0.125);
-					color: #fff;
+					color: #888;
 				}
 
 					#nav ul li a.active span:before {
-						color: #e27689;
+						color: #69b3a2;
 					}
 
 /* Footer */
@@ -2233,8 +2233,8 @@ input, select, textarea {
 		}
 
 			#main > section.dark {
-				color: #ddd;
-				color: rgba(255, 255, 255, 0.75);
+				color: #888;
+
 			}
 
 				#main > section.dark h2, #main > section.dark h3, #main > section.dark h4, #main > section.dark h5, #main > section.dark h6 {
@@ -2242,12 +2242,12 @@ input, select, textarea {
 				}
 
 				#main > section.dark strong {
-					color: #fff;
+					color: #888;
 					border-color: inherit;
 				}
 
 				#main > section.dark a {
-					color: #fff;
+					color: #888;
 					border-color: inherit;
 				}
 
